--- a/style.css
+++ b/style.css
@@ -15,3 +15,24 @@ p {
   border-radius: 20px;
   padding: 10px;
 }
+
+#search-form {
+  margin-top: 2rem;
+  border: 1px solid grey;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  align-items: center;
+}
+
+#span-details {
+  display: flex;
+  gap: 1rem;
+}
+#span-details span {
+  border: 1px solid #f2fd7d;
+  border-radius: 10px;
+  padding: 10px;
+}
