--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ p {
   border-radius: 10px;
   padding: 10px;
 }
+
+#image img {
+  width: 200px;
+  border: 1px solid grey;
+  padding: 2px;
+  border-radius: 20px;
+  height: 200px;
+}
