--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ p {
 #info {
   border: 1px solid grey;
   border-radius: 20px;
-  padding: 10px;
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+  background: #252527;
 }
 
 #search-form {
