--- a/style.css
+++ b/style.css
@@ -29,14 +29,17 @@ p {
 }
 
 #search-form {
-  margin-top: 2rem;
+  margin: 2rem auto;
   border: 1px solid grey;
   border-radius: 30px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 1rem;
   padding: 1rem;
   align-items: center;
+  justify-content: center;
+  width: 50%;
+  background: #333;
 }
 
 #span-details {
