--- a/style.css
+++ b/style.css
@@ -69,14 +69,11 @@ p {
   margin: 2rem 0;
 }
 
-#span-details {
+#image {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 1rem;
-}
-#span-details span {
-  border: 1px solid #f2fd7d;
-  border-radius: 10px;
-  padding: 10px;
 }
 
 #image img {
@@ -87,6 +84,15 @@ p {
   height: 200px;
 }
 
+#span-details {
+  display: flex;
+  gap: 1rem;
+}
+#span-details span {
+  border: 1px solid #f2fd7d;
+  border-radius: 10px;
+  padding: 10px;
+}
 #user-comment {
   display: flex;
   flex-direction: column;
