--- a/style.css
+++ b/style.css
@@ -92,10 +92,14 @@ p {
   margin-top: 10px;
   gap: 1rem;
 }
+
 #span-details span {
   border: 1px solid #f2fd7d;
   border-radius: 10px;
   padding: 10px;
+  background: #333;
+  transition: 0.3s;
+  cursor: pointer;
 }
 #user-comment {
   display: flex;
