--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #252527;
+  padding: 20px;
+  border-radius: 15px;
+  width: 50%;
+  margin: auto;
 }
 
 #user-comment form {
