set a color and font size to the h4 in the user-comment part

--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ p {
   margin: auto;
 }
 
+#user-comment h4 {
+  font-size: 1.2rem;
+  color: #f2fd7d;
+}
+
 #user-comment form {
   display: flex;
   flex-direction: column;
