--- a/style.css
+++ b/style.css
@@ -127,8 +127,21 @@ p {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 100%;
 }
 
+textarea {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  resize: vertical;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  background: #333;
+  color: #e0e0e0;
+}
 #submit-comments {
   align-self: flex-end;
   padding: 0.5rem;
