--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ body {
   flex: 1;
 }
 
+#image-slide {
+  border: 1px solid #f2fd7d;
+  border-radius: 20px;
+  padding: 10px;
+}
+.placeholder-p {
+  border: 1px solid #f2fd7d;
+  border-radius: 20px;
+  padding: 20px;
+}
+
 h1 {
   color: #f2fd7d;
   text-align: center;
