to the p element and image-slide div, add a border, a border radius and some padding to them and a text align center to the paceholder-p also

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   border: 1px solid #f2fd7d;
   border-radius: 20px;
   padding: 10px;
+  text-align: center;
 }
 .placeholder-p {
   border: 1px solid #f2fd7d;
